--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
      <!-- Navigation Bar -->
       <nav>
         <a href="#">INICIO</a>
-        <a href="./views/Registro.html">REGISTRO</a>
+        <a href="./views/registro.html">REGISTRO</a>
         <a href="./views/contacto.html">CONTACTO</a>
         <a href="./views/galeria.html">GALERIA</a>
       </nav>
